--- a/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
+++ b/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
@@ -1802,4 +1802,7 @@
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="contextFormatNormal.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
 </root>
